--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,9 +56,7 @@
     font-weight: bold;
     text-align:right !important;
     color: rgba(35, 33, 33, 0.85) !important;
-    display: flex;
-    flex-wrap: nowrap;
-    white-space:nowrap;
+    width: max-content;
 }
 .labeldisplay{
     padding: .5em .6em;
