--- a/templates/sortie/sortieModificationAvecLieu.html.twig
+++ b/templates/sortie/sortieModificationAvecLieu.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 
-    <form method="post" class="pure-form pure-form-aligned centred-conteneur">
+    <form method="post" class="pure-form pure-form-aligned centred-conteneur" id="formulaire-modifier">
         <fieldset class="pure-g">
             <div class="pure-g">
                 <div class="pure-u-1-2">
@@ -52,7 +52,7 @@
     </form>
     <div class="centred-conteneur">
         <div class="pure-controls">
-            <button class="pure-button button-primary" type="submit">Modifier</button>
+            <button class="pure-button button-primary" type="submit" id="submit-modifier">Modifier</button>
             <a class="pure-button button-primary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier la
                 sortie</a>
             <a class="pure-button button-primary" href="{{ path('sortie_suppression', {"id" : sortie.id}) }}">Supprimer
@@ -60,4 +60,5 @@
             <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
         </div>
     </div>
+    <script src="{{ asset('js/modification.js') }}"></script>
 {% endblock %}
