push avant merge dev

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -14,7 +14,7 @@
                 left: 50%;
                 transform: translate(-50%,-50%);
     ">
-            <fieldset class="pure-g">
+            <fieldset>
                 <div class="pure-g">
                     <div class="pure-u-1-2">
                         <div class="creation-champs pure-control-group">
