--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,26 +3,16 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>
-        {% block title %}Welcome!{% endblock %}
-    </title>
+    <title>{% block title %}Welcome!{% endblock %}</title>
 
-    <link href="{{ asset('css/main.css') }}" rel="stylesheet">
-    {% block stylesheets %}
-    {% endblock %}
-
+    {% block stylesheets %}{% endblock %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/2.0.6/pure-min.css"
           integrity="sha512-/VectwrK3cVMbl6IFsHj/O+fbxfLQm5rved2LR8HnaNuIL6fs8yBXNSi25hhQCB2713sc3Cbh5a4wLRSsZvDxg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link href="{{ asset('css/main.css') }}" rel="stylesheet">
 </head>
 
-
-{% if error is defined %}
-
-<body onload="errorAlert('{{ error }}')">
-{% else %}
 <body>
-{% endif %}
 <div class="pure-menu pure-menu-horizontal menu-bordereau">
     <div class="pure-g">
         <div class="pure-u-1-3">
@@ -59,4 +49,9 @@
 {% endblock %}
 </body>
 <script src="{{ asset('js/error.js') }}"></script>
+{% if error is defined %}
+    <script>
+        errorAlert('{{ error }}');
+    </script>
+{% endif %}
 </html>
