--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -7,72 +7,71 @@
     <script src="/js/moment.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/bootstrap-datetimepicker.min.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-datetimepicker.min.css">
 {% endblock %}
 
 {% block body %}
-
     <form method="post" class="pure-form pure-form-aligned centred-conteneur" id="formulaire-modifier">
         <fieldset class="pure-g">
-            <div class="pure-g">
-                <div class="pure-u-1-2">
-                    <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.nom, { 'label': 'Nom de la sortie' }) }}
-                    </div>
+            <div class="pure-u-1-2">
 
-                    <div class='creation-champs pure-control-group'>
-                        {{ form_label(formUpdate.dateHeureDebut) }}
-                        <div class="creation-champs pure-control-group">
-                            <div class='input-group date' id='datetimepicker1'>
-                                {{ form_widget(formUpdate.dateHeureDebut) }}
-                                <span class="input-group-addon">
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.nom, { 'label': 'Nom de la sortie' }) }}
+                </div>
+
+                <div class='pure-control-group'>
+                    {{ form_label(formUpdate.dateHeureDebut) }}
+                    <div class="pure-control-group">
+                        <div class='input-group date' id='datetimepicker1'>
+                            {{ form_widget(formUpdate.dateHeureDebut) }}
+                            <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
-                            </div>
                         </div>
-                    </div>
-
-                    <div class='creation-champs pure-control-group'>
-                        {{ form_label(formUpdate.dateLimiteInscription) }}
-                        <div class="creation-champs pure-control-group">
-                            <div class='input-group' id='datetimepicker2'>
-                                {{ form_widget(formUpdate.dateLimiteInscription) }}
-                                <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-calendar"></span>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15' , 'value' : '15'}}) }}
-                    </div>
-                    <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.nbInscriptionMax) }}
-                    </div>
-                    <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.infosSortie) }}
                     </div>
                 </div>
-                <div class="pure-u-1-2">
-                    <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.site) }}
-                    </div>
-                    <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.lieu) }}
-                    </div>
-                    <div>
-                        <a href="{{ path('sortie_modifier_lieu', {"id" : sortie.id}) }}">
-                            <img src="{{ asset('img/plus-circle.svg') }}">
-                        </a>
-                    </div>
-                    {{ form_rest(formUpdate) }}
 
+                <div class='creation-champs pure-control-group'>
+                    {{ form_label(formUpdate.dateLimiteInscription) }}
+                    <div class="creation-champs pure-control-group">
+                        <div class='input-group' id='datetimepicker2'>
+                            {{ form_widget(formUpdate.dateLimiteInscription) }}
+                            <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="creation-champs pure-control-group">
+                    {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15' , 'value' : '15'}}) }}
+                </div>
+                <div class="creation-champs pure-control-group">
+                    {{ form_row(formUpdate.nbInscriptionMax) }}
+                </div>
+                <div class="creation-champs pure-control-group">
+                    {{ form_row(formUpdate.infosSortie) }}
                 </div>
             </div>
+
+            <div class="pure-u-1-2">
+                <div class="creation-champs pure-control-group">
+                    {{ form_row(formUpdate.site) }}
+                </div>
+                <div class="creation-champs pure-control-group">
+                    {{ form_row(formUpdate.lieu) }}
+                </div>
+                <div>
+                    <a href="{{ path('sortie_modifier_lieu', {"id" : sortie.id}) }}">
+                        <img src="{{ asset('img/plus-circle.svg') }}">
+                    </a>
+                </div>
+                {{ form_rest(formUpdate) }}
+            </div>
+
         </fieldset>
     </form>
+
     <div class="centred-conteneur">
         <div class="pure-controls">
             <button class="pure-button button-primary" type="submit" id="submit-modifier">Modifier</button>
@@ -96,5 +95,4 @@
             });
         });
     </script>
-
 {% endblock %}
