--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -99,10 +99,10 @@
     <script>
         $(function () {
             $('#datetimepicker1').datetimepicker({
-                format: "YYYY-MM-DD hh:mm:ss",
+                format: "YYYY-MM-DD hh:mm a",
             });
             $('#datetimepicker2').datetimepicker({
-                format: "YYYY-MM-DD hh:mm:ss",
+                format: "YYYY-MM-DD hh:mm a",
             });
         });
     </script>
