--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,13 +3,19 @@
     justify-content: flex-end;
 }
 
-#base-logo{
+#grouplogo a{
+    text-decoration: none;
+}
+#logologo{
+    margin-top: auto;
+    margin-left: 20vh;
     width: 70px;
     height: 70px;
+    /*filter: invert(8%) sepia(100%) saturate(6481%) hue-rotate(246deg) brightness(102%) contrast(143%);*/
+    filter: invert(75%) contrast(119%) saturate(246%)  sepia(1);
 }
-
-.base-titre{
-    text-align: center;
+#logodotcom{
+    height: 75px;
 }
 
 .button-no-button{
@@ -47,7 +53,7 @@
 }
 
  .menu-bordereau{
-     background-color: #FAF391;
+     background-color: rgba(128, 122, 122, 0.62);
      height: max-content;
  }
 
