--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Sortir.com{% endblock %}</title>
 
     {% block stylesheets %}{% endblock %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/2.0.6/pure-min.css"
@@ -14,15 +14,16 @@
 
 <body>
 <div class="pure-menu pure-menu-horizontal menu-bordereau">
-    <div class="pure-g">
-        <div class="pure-u-1-3">
-            <a href="{{ path('home') }}"><img src="{{ asset('img/logo.png') }}" id="base-logo"></a>
-        </div>
-        <div class="pure-menu-list pure-u-1-3 base-titre">
-            <h1>Sortie.com</h1>
+    <div class="pure-u-1-1">
+        <div class="pure-u-1-2" id="grouplogo">
+            <a href="{{ path('home') }}">
+                <img src="{{ asset('img/logo.svg') }}" id="logologo">
+                <img id="logodotcom" src="/img/sortirdotcom.svg" alt="Sortir.com">
+            </a>
         </div>
         {% if app.user %}
-            <ul class="pure-menu-list pure-u-1-3" id="base-button">
+            <div class="pure-menu-list pure-u-1-2 ">
+            <ul class="" id="base-button">
                 {% if is_granted('ROLE_ADMIN') %}
                     <li class="pure-menu-item">
                         <a href="{{ path('ville') }}" class="pure-menu-link">Villes</a>
@@ -41,6 +42,7 @@
                     <a href="{{ path('app_logout') }}" class="pure-menu-link">Se déconnecter</a>
                 </li>
             </ul>
+            </div>
         {% endif %}
     </div>
 </div>
