--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -5,7 +5,12 @@
 {% block body %}
     <div class="pure-form pure-form-aligned centred-conteneur">
         <fieldset>
-            <legend>Détail de la sortie</legend>
+           {% if sortie.etat.id == 6 %}
+                        <legend style="color: red;font-weight: bold " >Motif d'annulation :
+                            {{ sortie.annulationSortie.libelle }}</legend>
+               {% elseif sortie.etat.id  !=6 %}
+                   <legend >Détail de la sortie</legend>
+                {% endif %}
             <div class="example-wrapper pure-g">
                 <div class="pure-u-1-2">
                     <div class="creation-champs pure-control-group">
@@ -66,12 +71,7 @@
                         <label>Longitude</label>
                         <label class="displayed">{{ sortie.lieu.longitude }}</label>
                     </div>
-                    {% if sortie.etat.id == 6 %}
-                        <div class="creation-champs pure-control-group">
-                            <label>Motif d'annulation</label>
-                            <label class="displayed">{{ sortie.annulationSortie.libelle }}</label>
-                        </div>
-                    {% endif %}
+
                 </div>
             </div>
         </fieldset>
