--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -5,12 +5,12 @@
 {% block body %}
     <div class="pure-form pure-form-aligned centred-conteneur">
         <fieldset>
+            <legend >Détail de la sortie
            {% if sortie.etat.id == 6 %}
-                        <legend style="color: red;font-weight: bold " >Motif d'annulation :
-                            {{ sortie.annulationSortie.libelle }}</legend>
-               {% elseif sortie.etat.id  !=6 %}
-                   <legend >Détail de la sortie</legend>
-                {% endif %}
+                        &nbsp<strong style="color: red;" >(Annulée :
+                            {{ sortie.annulationSortie.libelle }})</strong>
+            {% endif %}
+            </legend>
             <div class="example-wrapper pure-g">
                 <div class="pure-u-1-2">
                     <div class="creation-champs pure-control-group">
