Message de prévention RGPD

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -77,7 +77,7 @@
             <button class="pure-button button-primary" type="submit" id="submit-modifier">Modifier</button>
             <a class="pure-button button-primary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier la
                 sortie</a>
-            <a class="pure-button button-primary" href="{{ path('sortie_suppression', {"id" : sortie.id}) }}">Supprimer
+            <a class="pure-button button-primary" href="{{ path('sortie_suppression', {"id" : sortie.id}) }}" onclick="alert('Attention, cette sortie ne sera visible à aucun endroit du site mais restera archivée dans la base de donnée')">Supprimer
                 la sortie</a>
             <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
         </div>
