--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -90,7 +90,7 @@
                         <th>Actions</th>
                     </tr>
                     </thead>
-                    <tbody id="lol">
+                    <tbody id="hometabbody">
                     {% for sortie in sorties %}
                         <tr class="">
                             <td>{{ sortie.nom }}</td>
