--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,11 +58,12 @@ h2{
 
 .fixed_header th, .fixed_header td {
     padding: 5px;
-    text-align: left;
     width: 10vw;
 }
 
-
+.centeredtab{
+    text-align: center;
+}
 
 
 
