--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,6 +73,10 @@
 }#hometabbody>tr:nth-child(even){
     background: rgba(17, 144, 199, 0.79);
     color: #ffffff;
+     text-shadow: 1px 1px 0px rgb(0 0 0);
+}
+a{
+    text-shadow: none;
 }
 
 
