--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,12 +58,14 @@ h2{
 
 .fixed_header th, .fixed_header td {
     padding: 5px;
-    text-decoration: none;
     width: 10vw;
 }
 
 .centeredtab{
     text-align: center;
+}
+.centeredtab a {
+    text-decoration: none;
 }
 
 
