--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -82,7 +82,7 @@
                     <tr>
                         <th>Nom de la sortie</th>
                         <th>Date de la sortie</th>
-                        <th>Clotûre</th>
+                        <th>Fin d'inscription</th>
                         <th>Inscrit/Places</th>
                         <th>Etat</th>
                         <th>Inscrit</th>
@@ -98,7 +98,6 @@
                             <td>{{ sortie.dateLimiteInscription|date('d/m/Y') }}</td>
                             <td>{{ sortie.participants|length }}/{{ sortie.nbInscriptionMax }}</td>
                             <td>{{ sortie.etat.libelle }}</td>
-
                             {% set find = 0 %}
                             {% if app.user.getSorties is not null %}
                                 {% for sortieUser in app.user.getSorties %}
@@ -109,7 +108,6 @@
                             {% else %}
                                 {% set find = 0 %}
                             {% endif %}
-
                             {% if find == 1 %}
                                 <td>X</td>
                             {% else %}
@@ -118,63 +116,64 @@
 
                             {% if app.user.id != sortie.organisateur.id %}
                                 <td class="centeredtab">
-                                    <a href="{{ path('participant_show', {"id" : sortie.organisateur.id}) }}">
+                                    <a class="orgalink" href="{{ path('participant_show', {"id" : sortie.organisateur.id}) }}">
                                         {{ sortie.organisateur.pseudo }}
                                         <span>
-                                            <img src="/img/person-square.svg" alt="">
+                                            <img src="/img/person-square.svg" alt=".user">
                                         </span>
                                     </a>
                                 </td>
                             {% else %}
                                 <td class="centeredtab">
-                                    <p href="{{ path('participant_show', {"id" : sortie.organisateur.id}) }}">
-                                        {{ sortie.organisateur.pseudo }}
-                                        <span>
-                                            <img src="/img/person-square.svg" alt="">
-                                        </span>
+                                    <p class="myevent" href="{{ path('participant_show', {"id" : sortie.organisateur.id}) }}">
+                                        "Votre événement"
                                     </p>
                                 </td>
                             {% endif %}
 
                             {% if sortie.etat.id  == 1 %}
-                                <td>
-                                    <a class="pure-button button-secondary"
-                                       href="{{ path('sortie_modifier', {"id" : sortie.id}) }}">Modifier</a>
-                                    -
-                                    <a class="pure-button button-secondary"
-                                       href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier</a>
+                                <td class="centeredtab">
+                                    <a class="pure-button button-secondary" href="{{ path('sortie_modifier', {"id" : sortie.id}) }}">
+                                        Modifier
+                                    </a>
+                                    <a class="pure-button button-secondary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">
+                                        Publier
+                                    </a>
                                 </td>
                             {% elseif sortie.etat.id == 2 %}
                                 {% if app.user.id == sortie.organisateur.id %}
-                                    <td>
-                                        <a class="pure-button button-primary"
-                                           href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
-                                        -
-                                        <a class="pure-button button-secondary"
-                                           href="{{ path('sortie_annuler', {"id" : sortie.id}) }}">Annuler</a>
+                                    <td class="centeredtab">
+                                        <a class="pure-button button-primary" href="{{ path('sortie_details', {"id" : sortie.id}) }}">
+                                            Afficher
+                                        </a>
+                                        <a class="pure-button button-secondary" href="{{ path('sortie_annuler', {"id" : sortie.id}) }}">
+                                            Annuler
+                                        </a>
                                     </td>
                                 {% else %}
-                                    <td>
-                                        <a class="pure-button button-primary"
-                                           href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
-                                        -
+                                    <td class="centeredtab">
+                                        <a class="pure-button button-primary" href="{{ path('sortie_details', {"id" : sortie.id}) }}">
+                                            Afficher
+                                        </a>
                                         {% if find == 1 %}
-                                            <a class="pure-button button-secondary"
-                                               href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">Se
-                                                désister</a>
+                                            <a class="pure-button button-secondary" href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">
+                                                Se désister
+                                            </a>
                                         {% else %}
-                                            <a class="pure-button button-secondary"
-                                               href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">S'inscrire</a>
+                                            <a class="pure-button button-secondary" href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">
+                                                S'inscrire
+                                            </a>
                                         {% endif %}
                                     </td>
                                 {% endif %}
                             {% elseif sortie.etat.id == 3 %}
-                                <td>
-                                    <a class="pure-button button-primary"
-                                       href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
-                                        -
-                                        <a class="pure-button button-secondary"
-                                           href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">Se désister</a>
+                                <td class="centeredtab">
+                                    <a class="pure-button button-primary" href="{{ path('sortie_details', {"id" : sortie.id}) }}">
+                                        Afficher
+                                    </a>
+                                    <a class="pure-button button-secondary" href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">
+                                        Se désister
+                                    </a>
                                 </td>
                             {% elseif sortie.etat.id == 4 or sortie.etat.id == 5 or sortie.etat.id == 6 or sortie.etat.id == 7%}
                                 {% set archivee = 0 %}
@@ -186,9 +185,10 @@
                                 {% endfor %}
 
                                 {% if archivee == 0 %}
-                                    <td>
-                                        <a class="pure-button button-primary"
-                                           href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
+                                    <td class="centeredtab">
+                                        <a class="pure-button button-primary" href="{{ path('sortie_details', {"id" : sortie.id}) }}">
+                                            Afficher
+                                        </a>
                                     </td>
                                 {% else %}
                                     <td>
