--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@ body{
     background: radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
     background: -webkit-radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
     background: -moz-radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
+    cursor: none;/* lol mdr */
 }
 
 .menu-bordereau{
@@ -10,7 +11,7 @@ body{
     background: linear-gradient(315deg,#008dff 0%, #fffc00 150%);
     background: -webkit-linear-gradient(315deg,#008dff 0%, #fffc00 150%);
     background: -moz-linear-gradient(315deg,#008dff 0%, #fffc00 150%);
-    height: max-content;
+
 }
 #grouplogo a{
     text-decoration: none;
@@ -99,7 +100,7 @@ a{
     width: max-content;
 }
 .labeldisplay{
-    padding: .5em .6em;
+    padding: inherit;
 }
 .inline{
 
