--- a/public/css/main.css
+++ b/public/css/main.css
@@ -154,6 +154,6 @@ a{
 }
 .spacement>label:first-child{
     font-weight: bold;
-    text-decoration: wavy underline green;
+    text-decoration:  underline ;
 }
 
