--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -8,23 +8,23 @@
     <fieldset>
         <legend>Profil de '<strong>{{ participant.pseudo }}</strong>'</legend>
             <div class="pure-control-group spacement">
-                <label>Nom</label>
+                <label>Nom :</label>
                 <label class="displayed">{{ participant.nom }}</label>
             </div>
             <div class="pure-control-group spacement">
-                <label>Prénom</label>
+                <label>Prénom :</label>
                 <label class="displayed">{{ participant.prenom }}</label>
             </div>
             <div class="pure-control-group spacement">
-                <label>Téléphone</label>
+                <label>Téléphone :</label>
                 <label class="displayed">{{ participant.telephone }}</label>
             </div>
             <div class="pure-control-group spacement">
-                <label>Email</label>
+                <label>Email :</label>
                 <label class="displayed">{{ participant.email }}</label>
             </div>
             <div class="pure-control-group spacement">
-                <label>Site</label>
+                <label>Site :</label>
                 <label class="displayed">{{ participant.site.nom }}</label>
             </div>
 
