--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -14,23 +14,23 @@
             <div class="example-wrapper pure-g">
                 <div class="pure-u-1-2">
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Nom de la sortie</label>
+                        <label>Nom de la sortie :</label>
                         <label class="displayed">{{ sortie.nom }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Date et heure de la sortie</label>
+                        <label>Date et heure de la sortie :</label>
                         <label class="displayed">{{ sortie.dateHeureDebut | date('d/m/Y H:i') }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Date limite d'inscription</label>
+                        <label>Date limite d'inscription :</label>
                         <label class="displayed">{{ sortie.dateLimiteInscription | date('d/m/Y H:i') }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Nombre de place</label>
+                        <label>Nombre de place :</label>
                         <label class="displayed">{{ sortie.nbInscriptionMax }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Durée</label>
+                        <label>Durée :</label>
                         <label class="displayed">
                             {% if sortie.duree>=1440 %}
                                 {{ sortie.duree//1440 }} j {{ (sortie.duree%1440)//60 }} h
@@ -42,38 +42,38 @@
                             </label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Description et infos</label>
+                        <label>Description et infos :</label>
                         <label class="displayed">{{ sortie.infosSortie }}</label>
                     </div>
                 </div>
                 <div class="pure-u-1-2">
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Ville organisatrice</label>
+                        <label>Ville organisatrice :</label>
                         <label class="displayed">{{ sortie.lieu.ville.nom }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Lieu</label>
+                        <label>Lieu :</label>
                         <label class="displayed">{{ sortie.lieu.nom }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Rue</label>
+                        <label>Rue :</label>
                         <label class="displayed">{{ sortie.lieu.rue }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Code postal</label>
+                        <label>Code postal :</label>
                         <label class="displayed">{{ sortie.lieu.ville.codePostal }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Latitude</label>
+                        <label>Latitude :</label>
                         <label class="displayed">{{ sortie.lieu.latitude }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Longitude</label>
+                        <label>Longitude :</label>
                         <label class="displayed">{{ sortie.lieu.longitude }}</label>
                     </div>
                     {% if sortie.etat.id == 7 %}
                         <div class="creation-champs pure-control-group spacement">
-                            <label>Motif d'annulation</label>
+                            <label>Motif d'annulation :</label>
                             <label class="displayed">{{ sortie.annulationSortie.libelle }}</label>
                         </div>
                     {% endif %}
