--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body{
     background: radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
     background: -webkit-radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
     background: -moz-radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
-    cursor: none;/* lol mdr */
+    /*cursor: none; lol mdr */
 }
 
 .menu-bordereau{
@@ -164,3 +164,24 @@ a{
     text-decoration: wavy underline green;
 }
 
+.pickerrow{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+}
+.fix16px{
+    width: 16px;
+}
+
+ .formsortie textarea,
+ .formsortie select,
+ .formsortie input{
+     min-width: 12vw;
+     max-width: 12vw;
+ }
+ .input-group{
+     min-width: 10vw !important;
+     max-width: 10vw !important;
+ }
