UPDATE css Sortie(no-lieu)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -185,3 +185,6 @@ a{
      min-width: 10vw !important;
      max-width: 10vw !important;
  }
+ .pure-controls{
+    /* letter-spacing: normal;*/
+ }
