--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -12,79 +12,79 @@
 {% endblock %}
 
 {% block body %}
-    <form method="post" class="pure-form pure-form-aligned centred-conteneur" id="formulaire-modifier">
-        <fieldset class="pure-g">
-            <div class="pure-u-1-2">
 
-                <div class="pure-control-group">
-                    {{ form_row(formUpdate.nom, { 'label': 'Nom de la sortie' }) }}
-                </div>
+    <form method="post" class="pure-form pure-form-aligned centred-conteneur formsortie">
+        <fieldset>
+            <div class="pure-g">
+                <div class="pure-u-1-2">
+                    <div class="creation-champs pure-control-group">
+                        {{ form_row(formUpdate.nom) }}
+                    </div>
 
-                <div class='pure-control-group'>
-                    {{ form_label(formUpdate.dateHeureDebut) }}
-                    <div class="pure-control-group">
-                        <div class='input-group date' id='datetimepicker1'>
+                    <div class='creation-champs pure-control-group pickerrow'>
+                        {{ form_label(formUpdate.dateHeureDebut) }}<?
+                        ?>
+                        <div class='input-group' id='datetimepicker1'>
                             {{ form_widget(formUpdate.dateHeureDebut) }}
                             <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-calendar"></span>
-                                </span>
+                                <span class="glyphicon glyphicon-calendar fix16px"></span>
+                            </span>
                         </div>
                     </div>
-                </div>
 
-                <div class='creation-champs pure-control-group'>
-                    {{ form_label(formUpdate.dateLimiteInscription) }}
-                    <div class="creation-champs pure-control-group">
-                        <div class='input-group' id='datetimepicker2'>
+                    <div class='creation-champs pure-control-group pickerrow'>
+                        {{ form_label(formUpdate.dateLimiteInscription) }}<?
+                        ?>
+                        <div class='input-group date' id='datetimepicker2'>
                             {{ form_widget(formUpdate.dateLimiteInscription) }}
                             <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-calendar"></span>
-                                </span>
+                                <span class="glyphicon glyphicon-calendar fix16px"></span>
+                            </span>
                         </div>
                     </div>
+
+                    <div class="creation-champs pure-control-group">
+                        {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15' , 'value' : '15'}}) }}
+                    </div>
+                    <div class="creation-champs pure-control-group">
+                        {{ form_row(formUpdate.nbInscriptionMax) }}
+                    </div>
+                    <div class="creation-champs pure-control-group">
+                        {{ form_row(formUpdate.infosSortie) }}
+                    </div>
                 </div>
-                <div class="creation-champs pure-control-group">
-                    {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15' , 'value' : '15'}}) }}
+                <div class="pure-u-1-2">
+                    <div class="pure-control-group">
+                        {{ form_row(formUpdate.site) }}
+                    </div>
+                    <div class="pure-control-group">
+                        {{ form_row(formUpdate.lieu) }}
+                    </div>
+                    <div>
+                        <a href="{{ path('sortie_modifier_lieu', {"id" : sortie.id}) }}">
+                            <img src="{{ asset('img/plus-circle.svg') }}">
+                        </a>
+                    </div>
+                    {{ form_rest(formUpdate) }}
                 </div>
-                <div class="creation-champs pure-control-group">
-                    {{ form_row(formUpdate.nbInscriptionMax) }}
-                </div>
-                <div class="creation-champs pure-control-group">
-                    {{ form_row(formUpdate.infosSortie) }}
+                <div class="pure-controls">
+                    <button class="pure-button button-primary" type="submit" id="submit-modifier">Modifier</button>
                 </div>
             </div>
-
-            <div class="pure-u-1-2">
-                <div class="creation-champs pure-control-group">
-                    {{ form_row(formUpdate.site) }}
-                </div>
-                <div class="creation-champs pure-control-group">
-                    {{ form_row(formUpdate.lieu) }}
-                </div>
-                <div>
-                    <a href="{{ path('sortie_modifier_lieu', {"id" : sortie.id}) }}">
-                        <img src="{{ asset('img/plus-circle.svg') }}">
-                    </a>
-                </div>
-                {{ form_rest(formUpdate) }}
-            </div>
-
         </fieldset>
     </form>
 
-    <div class="centred-conteneur">
-        <div class="pure-controls">
-            <button class="pure-button button-primary" type="submit" id="submit-modifier">Modifier</button>
-            <a class="pure-button button-primary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier la
-                sortie</a>
-            <a class="pure-button button-primary" href="{{ path('sortie_suppression', {"id" : sortie.id}) }}" onclick="alert('Attention, cette sortie ne sera visible à aucun endroit du site mais restera archivée dans la base de donnée')">Supprimer
-                la sortie</a>
-            <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
-        </div>
+    <div class="pure-controls centred-conteneur">
+        <a class="pure-button button-primary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier la
+            sortie</a>
+        <a class="pure-button button-primary" href="{{ path('sortie_suppression', {"id" : sortie.id}) }}"
+           onclick="alert('Attention, cette sortie ne sera visible à aucun endroit du site mais restera archivée dans la base de donnée')">Supprimer
+            la sortie</a>
+        <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
     </div>
 
     <script src="{{ asset('js/modification.js') }}"></script>
-
+    <script src="{{ asset('js/selectCreationModification.js') }}"></script>
     <script>
         $(function () {
             $('#datetimepicker1').datetimepicker({
