--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -51,7 +51,7 @@
             cursor: pointer;
         }
     </style>
-    <form method="post" class="pure-form pure-form-aligned centred-conteneur formsortie">
+    <form method="post" class="pure-form pure-form-aligned centred-conteneur formsortie" id="formulaire-modifier">
         <fieldset>
             <!--<div class="pure-g">-->
             <div>
